test/corpus/expect_dbl/ok0013_emptyADT.txt
==================
ok0013_emptyADT.fram
==================
data E =

data M =
| None
| Some of E
---

(source_file
  (def_list
    (def_data
      (uid_path
        (uid)))
    (def_data
      (uid_path
        (uid))
      (ctor_decl
        (uid))
      (ctor_decl
        (uid)
        (uid_path
          (uid))))))
