test/corpus/expect_dbl/ok0019_simplePattern.txt
==================
ok0019_simplePattern.fram
==================
data Col = R | G | B

let rot = fn c =>
  match c with
  | R => G
  | G => B
  | B => R
  end
---

(source_file
  (def_list
    (def_data
      (uid_path
        (uid))
      (ctor_decl
        (uid))
      (ctor_decl
        (uid))
      (ctor_decl
        (uid)))
    (def_let
      (lid)
      (ex_fn
        (lid)
        (ex_match
          (lid)
          (match_clause
            (uid)
            (uid))
          (match_clause
            (uid)
            (uid))
          (match_clause
            (uid)
            (uid)))))))
