test/corpus/expect_dbl/ok0020_patternMatch.txt
==================
ok0020_patternMatch.fram
==================
data A = C1 | C2

data B = X | Y of A

let foo = fn x =>
  match x with
  | X   => C1
  | Y x => x
  end

let _ = foo (Y C2)
---

(source_file
  (def_list
    (def_data
      (uid_path
        (uid))
      (ctor_decl
        (uid))
      (ctor_decl
        (uid)))
    (def_data
      (uid_path
        (uid))
      (ctor_decl
        (uid))
      (ctor_decl
        (uid)
        (uid_path
          (uid))))
    (def_let
      (lid)
      (ex_fn
        (lid)
        (ex_match
          (lid)
          (match_clause
            (uid)
            (uid))
          (match_clause
            (ex_app
              (uid)
              (lid))
            (lid)))))
    (def_let
      (wildcard)
      (ex_app
        (lid)
        (ex_app
          (uid)
          (uid))))))
