test/corpus/type_precedence.txt
================================================================================
Type alias definition
================================================================================

type T = Int

--------------------------------------------------------------------------------

(source_file
  (def_list
    (def_type
      (uid_path
        (uid))
      (uid_path
        (uid)))))

================================================================================
Public type alias definition
================================================================================

pub type MyType = String

--------------------------------------------------------------------------------

(source_file
  (def_list
    (def_type
      (pub)
      (uid_path
        (uid))
      (uid_path
        (uid)))))

================================================================================
Type expression in function parameter
================================================================================

let foo (x : type Int) = x

--------------------------------------------------------------------------------

(source_file
  (def_list
    (def_let
      (ex_app
        (lid)
        (ex_annot
          (lid)
          (type_annot
            (ty_expr_type
              (uid_path
                (uid))))))
      (lid))))

================================================================================
Type alias with parameterized type
================================================================================

type Option X = Int

--------------------------------------------------------------------------------

(source_file
  (def_list
    (def_type
      (ty_expr_app
        (uid_path
          (uid))
        (uid_path
          (uid)))
      (uid_path
        (uid)))))

================================================================================
Mixed type contexts - alias and expression
================================================================================

type T = Int
let foo (x : type T) = x

--------------------------------------------------------------------------------

(source_file
  (def_list
    (def_type
      (uid_path
        (uid))
      (uid_path
        (uid)))
    (def_let
      (ex_app
        (lid)
        (ex_annot
          (lid)
          (type_annot
            (ty_expr_type
              (uid_path
                (uid))))))
      (lid))))

================================================================================
Type alias with type application
================================================================================

type MyList = List Int

--------------------------------------------------------------------------------

(source_file
  (def_list
    (def_type
      (uid_path
        (uid))
      (ty_expr_app
        (uid_path
          (uid))
        (uid_path
          (uid))))))

================================================================================
Recursive data type with kind annotations
================================================================================

data rec Fix (F : type -> type) = Fix of F (Fix F)

--------------------------------------------------------------------------------

(source_file
  (def_list
    (def_data
      (rec)
      (ty_expr_app
        (uid_path
          (uid))
        (ty_kind_annot
          (uid)
          (kind_arrow
            (kind_type)
            (kind_type))))
      (ctor_decl
        (uid)
        (ty_expr_app
          (uid_path
            (uid))
          (ty_expr_app
            (uid_path
              (uid))
            (uid_path
              (uid))))))))

================================================================================
Character literals with escape sequences
================================================================================

let char_a = 'a'
let char_quote = '''
let char_newline = '\n'
let char_tab = '\t'
let char_backslash = '\\'

--------------------------------------------------------------------------------

(source_file
  (def_list
    (def_let
      (lid)
      (chr))
    (def_let
      (lid)
      (chr))
    (def_let
      (lid)
      (chr))
    (def_let
      (lid)
      (chr))
    (def_let
      (lid)
      (chr))))
